tests/fixtures/invalid/pow_int_float_list.py
# Cannot call pow() with Int, Float, List[int]
x = pow(1, 1.0, [1, 2, 3])
